[project]
name = "driveslow"
version = "0.1.0"
description = ""
authors = [
    { name = "cmiller01", email = "christian.david.miller@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "aiosqlite>=0.20.0",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["driveslow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
