[project]
name = "driveslow"
version = "0.1.0"
description = ""
authors = [
    { name = "cmiller01", email = "christian.david.miller@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "requests>=2.32.5",
    "structlog>=25.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["driveslow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
